docs: base for gh-pages

--- a/demo/src/app/app.component.html
+++ b/demo/src/app/app.component.html
@@ -6,7 +6,7 @@
       <mat-icon fontSet="mdi" fontIcon="mdi-github-box"></mat-icon>
       Github
     </a>
-    <a mat-button href="/api" target="_blank">
+    <a mat-button href="api" target="_blank">
       <mat-icon fontSet="mdi" fontIcon="mdi-file-document"></mat-icon>
       Documentation
     </a>
