#19: Fixes race condition on card view element

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -42,6 +42,8 @@
       (change)="requestUpdated($event)">
     </ngx-payment-request>
 
+    <button mat-flat-button color="primary" (click)="openPaymentDialog()">Open Payment Dialog</button>
+
   </mat-card>
 
   <mat-card>
